# 6502Emu

./: Cargo.toml  readme.md
src/: bus.rs  cpu.rs  joypad.rs  lib.rs  main.rs  mem.rs  opcodes.rs  rom.rs  trace.rs
src/ppu/registers/: control.rs  mask.rs
