[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
bitflags = "2.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
sdl2 = "0.35.2"
spin_sleep = "1.1.1"
